kubernetes/containerflow/containerflow.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: containerflow
spec:
  replicas: 2
  selector:
    matchLabels:
      app: containerflow
  template:
    metadata:
      labels:
        app: containerflow
    spec:
      containers:
      - name: containerflow
        image: shubham22121/containerflow:v1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: containerflow
spec:
  type: LoadBalancer
  selector:
    app: containerflow
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: containerflow-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: containerflow
            port:
              number: 80
